# healthcare-ai-platform-backend

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  schemas.py
app/api/routers/: admin.py  ai.py  audit.py  auth.py  dashboard.py  patients.py  queue.py  tenants.py  upload.py
app/api/utils/: common.py
app/core/: auth.py  config.py  permissions.py
app/db/: session.py  snowflake_client.py  warehouse.py
app/db/migrations/: 002_auth_schema.sql
app/events/: kafka.py
app/services/: email_service.py
migrations/: V001__initial_schema.sql  V002__seed_data.sql  V003__auth_schema.sql  V004__password_resets.sql
scripts/: create_admin.py
tests/: conftest.py  test_admin.py  test_ai.py  test_audit.py  test_auth.py  test_dashboard.py  test_health.py  test_patients.py  test_queue.py  test_tenants.py  test_upload.py
