[project]
name = "healthcare-ai-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the Healthcare AI Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.23.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "boto3>=1.34.0"
]

[project.scripts]
start = "uvicorn app.main:create_app --factory --reload"

[tool.uvicorn]
factory = "app.main:create_app"
