[project]
name = "healthcare-ai-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the Healthcare AI Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.23.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "aiokafka>=0.11.0",
  "databases[asyncpg]>=0.9.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.0.0",
  "snowflake-connector-python>=3.6.0"
]

[tool.uvicorn]
factory = "app.main:create_app"
